.kubernetes/templates/client/4.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "%NAMESPACE%"
  name: %NAMESPACE%-client
  labels:
    app: %NAMESPACE%-client
spec:
  selector:
    app: %NAMESPACE%-client
  ports:
    - name: '%NGINX_PORT%'
      protocol: TCP
      port: %NGINX_PORT%
      targetPort: %NGINX_PORT%
  type: ClusterIP
